syntax = "proto3";
package veranablockchain.diddirectory;

import "amino/amino.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/verana-labs/verana-blockchain/x/diddirectory/types";

// Params defines the parameters for the module.
message Params {
  option (amino.name) = "veranablockchain/x/diddirectory/Params";
  option (gogoproto.equal) = true;

  uint64 did_directory_trust_deposit = 1 [
    (gogoproto.moretags) = "yaml:\"did_directory_trust_deposit\"",
    (amino.dont_omitempty) = true
  ];
  uint64 did_directory_grace_period = 2 [
    (gogoproto.moretags) = "yaml:\"did_directory_grace_period\"",
    (amino.dont_omitempty) = true
  ];
}